event pop-up image cropped fixed

--- a/themes/custom/athena/assets/styles/modules/_eventPopup.scss
+++ b/themes/custom/athena/assets/styles/modules/_eventPopup.scss
@@ -11,6 +11,7 @@
   height: 99px;
   object-fit: cover;
   border: solid 1.3px #ffac00;
+  object-position: 50% 0px;
 }
 
 .employers-icons li {
